--- a/templates/dropdownheader.html
+++ b/templates/dropdownheader.html
@@ -3,8 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script type="application/javascript" src="/home/nischal/Asharms/static/js/DropDownHeader.js"></script>
-    <link rel="stylesheet" type="text/css" href="/home/nischal/Asharms/static/css/DropDownHeader.css">
+    {% load staticfiles %}
+    <script src="{% static 'js/dropdownheader.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/dropdownheader.css' %}">
     <title></title>
 </head>
 <body>
