minor change in home html

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,5 +7,5 @@
 <body>
 
 </body>
-{% extends "/home/challa/PycharmProjects/Asharms/templates/header.html" %}
+{% extends "../templates/header.html" %}
 </html>
