--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
     {% load staticfiles %}
     <script src="{% static 'js/header.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'css/header.css' %}">
